# qdragtogrant

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/qdragtogrant/: AppDragSourceView.h  AppDragSourceView.mm  OverlayWindowController.h  OverlayWindowController.mm  QDragToGrant.h  QDragToGrantAssistant.mm  QDragToGrantHostApp.mm  QDragToGrantPanel.cpp  SettingsWindowLocator.h  SettingsWindowLocator.mm  TrustChecker.h  TrustChecker.mm
